Fixed tech icon overflow

--- a/public/css/todo.css
+++ b/public/css/todo.css
@@ -6,14 +6,14 @@ body{
 
 /*** Formatting Overlay ***/
 .overlay {
-    height: 100vh;
     position: fixed;
+    height: 100vh;
     width: 100vw;
     z-index: 1;
     top: 0;
     left: 0;
     background-color: rgba(0,0,0, 0.9);
-    overflow-x: hidden;
+    overflow: scroll;
     transition: 0.5s;
     display: flex;
     flex-direction: column;
@@ -46,3 +46,13 @@ body{
     color: white;
     font-size: 14px;
 }
+
+/*** Responsiveness ***/
+@media only screen and (max-width: 600px) {
+    .overlay{
+        min-height: 1000px;
+    }
+    .overlay-images{
+       display: none;
+    }
+  }
